# le-chef

./: -m  .gitignore  README.md  api-contract.md  competitors.md  navigation.md  recipe-curator.md
.claude/agents/: README.md  app-architect.md  backend-dev.md  competitor-scout.md  frontend-dev.md  recipe-curator.md
api/: README.md  pyproject.toml
api/app/: main.py
api/app/api/: deps.py
api/app/api/routers/: catalog.py  games.py  profile.py  recipes.py  restaurants.py  scan.py
api/app/core/: config.py
api/app/models/: __init__.py
app/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
app/src/api/: client.ts
app/src/components/: BubbleButton.tsx  Button.tsx  Card.tsx  Chip.tsx  IngredientRow.tsx  Logo.tsx  RecipeCard.tsx  RecipeImage.tsx  Screen.tsx
app/src/data/: recipes.ts
app/src/features/booking/: README.md
app/src/features/games/: README.md
app/src/navigation/: RootNavigator.tsx  TabBar.tsx  types.ts
app/src/screens/: BookingFlowScreen.tsx  GroceryScreen.tsx  HomeScreen.tsx  MakeYourOwnDinnerScreen.tsx  OccasionScreen.tsx  Placeholder.tsx  ProfileScreen.tsx  QuizScreen.tsx  RecipeDetailScreen.tsx  RecipesScreen.tsx  RecommendationsScreen.tsx  RestaurantsScreen.tsx  ScanScreen.tsx  WheelResultScreen.tsx
app/src/store/: index.ts
app/src/theme/: tokens.ts
docs/: api-contract.md  competitors.md  components.md  data-model.md  navigation.md  screens.md
docs/adr/: 0001-stack.md  0002-repo-structure.md  0003-navigation-extension-points.md
recipes/: README.md
