[project]
name = "le-chef-api"
version = "0.1.0"
description = "Le Chef backend — FastAPI + PostgreSQL + SQLModel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",  # multipart для /scan/photo
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "pytest>=8.3", "httpx>=0.27"]

[tool.ruff]
line-length = 100
